# rustchat

./: .env  Cargo.toml  example.json
schema/: basic.sql  env_setup.sql
schema/1/: update.sql
schema/2/: update.sql
src/: auth.rs  custom_types.rs  db.rs  main.rs
src/extractors/: extractors.rs
src/groups/: groups.rs  mod.rs
src/login/: login.rs
src/messages/: messages.rs  mod.rs
src/server/: app_state.rs
writeup/: RouteProtection.md  SessionExpiry.md
