[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.1" # to see actix logs 
tokio-postgres = "0.7.10"
serde = {version = "1.0", features = ["derive"] }
futures = "0.3"
sqlx = {version="0.7", features = ["runtime-tokio", "postgres", "chrono"]}
chrono = "0.4.31"
actix-session = {version = "0.8", features = ["redis-actor-session"]}
tokio = "1.31"
dotenvy = "0.15.7"
actix-utils = "3.0.1"
bcrypt = "0.15.0"
argon2 = "0.5.2"
rand = "0.8.5"
futures-util = "0.3.30"
log = "0.4.20"
serde_json = "1.0.111"
bimap = "0.6.3"
actix-web-lab = "0.20.2"

[env]
DATABASE_URL = { value = "postgresql://chat:password@localhost/chat" }
